--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@ body {
 }
 .degreeSign {
   text-align: center;
-  font-size: 34px;
+  font-size: 25px;
   margin-top: -50px;
   margin-bottom: -3px;
 }
@@ -119,6 +119,11 @@ body {
   cursor: pointer;
   background: #dddddf;
   box-shadow: 0px 30px 50px rgb(57 48 90 / 10%);
+}
+
+.active {
+  font-size: 40px;
+  font-weight: 700;
 }
 
 .DegreeUnitDisplay #celsius,
